@@ -490,7 +490,7 @@
     </object>
     
     <object class="modSession" table="session" extends="xPDOObject">
-        <field key="id" dbtype="varchar" precision="32" phptype="string" null="false" index="pk" default="" />
+        <field key="id" dbtype="varchar" precision="40" phptype="string" null="false" index="pk" default="" />
         <field key="access" dbtype="int" precision="20" phptype="timestamp" null="true" attributes="unsigned" />
         <field key="data" dbtype="text" phptype="string" />
     </object>
